--- a/www/plugins/demo/core/models/customfield/fields.yaml
+++ b/www/plugins/demo/core/models/customfield/fields.yaml
@@ -4,11 +4,16 @@ fields:
         span: auto
         required: 1
         type: text
-    model:
+    code:
+        label: Code
+        span: auto
+        required: 1
+        type: text
+    model_ref:
         label: Model
         showSearch: true
         span: auto
-        type: dropdown
+        type: relation
     type:
         label: Type
         showSearch: true
@@ -32,6 +37,13 @@ fields:
         label: Length
         span: auto
         type: number
+        dependsOn:
+            - type
+        trigger:
+            action: show
+            field: type
+            condition: 'value[integer] || value[smallInteger] || value[bigInteger] || value[string] || value[decimal] || value[double]'
+
     unsigned:
         label: Unsugned
         span: auto
