--- a/www/plugins/demo/workflow/models/queue/fields.yaml
+++ b/www/plugins/demo/workflow/models/queue/fields.yaml
@@ -12,73 +12,29 @@ fields:
         label: Description
         span: full
         type: richeditor
-    virtual:
-        label: Virtual
-        span: auto
-        type: switch
-        comment: 'A virtual queue item won''t be associated in database'
-    service_channel:
-        label: Service Channel
-        span: auto
-        type: relation
     application:
         label: Application
-        nameFrom: code
+        nameFrom: name
         descriptionFrom: version
         span: auto
         required: 1
         type: relation
 tabs:
     fields:
-        redundancy_policy:
-            label: 'Redundancy Policy'
-            options:
-                override: Override
-                addNew: 'Add New'
-                ignore: Ignore
-            showSearch: true
-            span: auto
-            required: 1
-            type: dropdown
-            tab: Input
-        condition:
-            label: 'Input Condition'
-            size: large
-            language: php
-            span: auto
-            hidden: 0
-            type: codeeditor
-            tab: Input
-        sort_order:
-            label: 'Sort Order'
-            options:
-                asc: Ascending
-                desc: Descending
-            showSearch: true
+        priority:
+            label: 'Priority'
             span: auto
             type: number
-            tab: Input
-        queue_order:
-            label: 'Queue Order Type'
-            options:
-                simple_queue: Simple
-                stack: Stack
-                ordered: Ordered
-                custom: Custom
-            showSearch: true
+            min: 0
+            comment: 'The tasks of queue with higher priority will be picked first than the queue with lower priority '
+            tab: Configuration
+        age_priority:
+            label: 'Age Priority'
             span: auto
-            required: 1
-            type: dropdown
-            tab: Display
-        pop_criteria:
-            label: 'Pop Criteria'
-            nameFrom: name
-            descriptionFrom: description
-            span: auto
-            required: 1
-            type: relation
-            comment: 'Select Routing Rule'
-            tab: Output
+            type: switch
+            default: true
+            comment: 'Enable this to consider the age priority of the task while calculating the priority'
+            tab: Configuration
         routing_rule:
             label: 'Routing Rule'
             nameFrom: name
@@ -87,17 +43,17 @@ tabs:
             required: 1
             type: relation
             comment: 'Select Routing Rule'
-            tab: Output
+            tab: Configuration
         assignment_groups:
             label: 'Assignment Groups'
             nameFrom: name
             descriptionFrom: description
             span: auto
             type: relation
-            tab: Output
+            tab: Configuration
 secondaryTabs:
     fields:
-        _queue_items:
+        _tasks:
             label: 'Tasks'
             span: full
             relation: HasMany
