--- a/www/plugins/demo/workflow/models/work/fields.yaml
+++ b/www/plugins/demo/workflow/models/work/fields.yaml
@@ -1,4 +1,10 @@
 fields:
+    service_channel:
+        label: Channel
+        nameFrom: name
+        descriptionFrom: description
+        span: auto
+        type: relation
     workflow:
         label: Workflow
         nameFrom: name
