--- a/www/plugins/demo/core/models/customfield/fields.yaml
+++ b/www/plugins/demo/core/models/customfield/fields.yaml
@@ -9,6 +9,7 @@ fields:
         span: auto
         required: 1
         type: text
+        readOnly: true
     model_ref:
         label: Model
         showSearch: true
