--- a/www/composer.json
+++ b/www/composer.json
@@ -48,7 +48,8 @@
         "webpatser/laravel-uuid": "^3.0",
         "swooletw/laravel-swoole": "^2.0",
         "timgws/query-builder-parser": "^1.5",
-        "symfony/expression-language": "^3.3"
+        "symfony/expression-language": "^3.3",
+        "bref/bref": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
