--- a/www/plugins/demo/workspace/models/workflowtransition/fields.yaml
+++ b/www/plugins/demo/workspace/models/workflowtransition/fields.yaml
@@ -6,19 +6,23 @@ fields:
         span: auto
         required: 1
         type: relation
+        context: create
     data:
         label: Data
         size: ''
         span: full
         type: codeeditor
+        context: create
     from_state:
         label: 'From State'
         span: auto
         type: relation
+        context: create
     to_state:
         label: 'To State'
         span: auto
         type: relation
+        context: create
     workflow:
         label: 'Workflow'
         nameFrom: name
