--- a/www/package.json
+++ b/www/package.json
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.20",
+    "rxjs": "^6.6.3"
+  }
 }
