--- a/www/package.json
+++ b/www/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.20",
-    "rxjs": "^6.6.3"
+    "mxgraph": "^4.2.0",
+    "rxjs": "^6.6.3",
+    "xml2json": "^0.12.0"
   }
 }
