--- a/www/package.json
+++ b/www/package.json
@@ -10,6 +10,11 @@
         "develop": "webpack --mode development --watch",
         "build": "webpack --mode production"
     },
+    "browser": {
+        "fs": false,
+        "path": false,
+        "os": false
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -20,7 +25,10 @@
         "xml2json": "^0.12.0"
     },
     "devDependencies": {
-        "webpack": "^5.1.3",
+        "@babel/core": "^7.12.3",
+        "@babel/preset-env": "^7.12.1",
+        "babel-loader": "^8.1.0",
+        "webpack": "^5.2.0",
         "webpack-cli": "^4.1.0"
     }
 }
